# iterative-pset-solver-with-multiple-LLMs

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  hints.md  improved_solver_prompt.md  improved_verifier_prompt.md  main.py  mcp_requirements.txt  pyproject.toml  test_bash_tool.py  test_caching_simple.py  test_claude_bash_usage.py  test_code_execution.py  test_simple.txt  test_simple_bash.py  test_tool_conversation.py
auto_pset_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm_providers/: anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  openai_provider.py
mcp_server/: client.py  math_tools.py
processors/: latex_styler.py  orchestrator.py  parallel_processor.py  problem_set_solver.py  summarizer.py
tests/: test_mcp_integration.py  test_network_fallback.py  test_web_search.py
utils/: __init__.py  config.py  memory_manager.py  network_checker.py  pdf_extractor.py  sandbox.py
